Implement Player 1 Next Card Preview (v3.2)

--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
                             <div class="recon-strike-label">STRIKE: <span id="p1-strike-rating">6.0</span> <span
                                     class="strike-delta" id="p1-strike-delta">(+0)</span></div>
                         </div>
+                        <!-- NEXT CARD PREVIEW -->
+                        <div class="next-card-container">
+                            <div class="next-card-label">NEXT DROP</div>
+                            <div id="p1-next-card-preview" class="card-slot active-preview"></div>
+                        </div>
                     </div>
                     <div id="p1-deck-grid" class="history-grid p1-history"></div>
                 </div>
