UI: Move Next Drop to sidebar center and resize to standard card

--- a/index.html
+++ b/index.html
@@ -213,9 +213,15 @@
                     </div>
                 </div>
 
-                <!-- Midline (Threat Delta) -->
-                <div class="midline-trench">
+                <!-- Midline (Threat Delta + NEXT DROP) -->
+                <div class="midline-trench combined-midline">
                     <div class="diff-badge" id="threat-delta">0</div>
+
+                    <!-- NEXT CARD PREVIEW (Moved to Center) -->
+                    <div class="next-card-container center-stage">
+                        <div class="next-card-label">NEXT DROP</div>
+                        <div id="p1-next-card-preview" class="card-slot active-preview"></div>
+                    </div>
                 </div>
 
                 <!-- Player Zone (mirrors p1-unit) -->
@@ -226,11 +232,6 @@
                             <div class="recon-power-value" id="p1-deck-sum">216</div>
                             <div class="recon-strike-label">STRIKE: <span id="p1-strike-rating">6.0</span> <span
                                     class="strike-delta" id="p1-strike-delta">(+0)</span></div>
-                        </div>
-                        <!-- NEXT CARD PREVIEW -->
-                        <div class="next-card-container">
-                            <div class="next-card-label">NEXT DROP</div>
-                            <div id="p1-next-card-preview" class="card-slot active-preview"></div>
                         </div>
                     </div>
                     <div id="p1-deck-grid" class="history-grid p1-history"></div>
