Implement War.1: AKQJ10 Double Deck, New Values, UI Updates

--- a/index.html
+++ b/index.html
@@ -19,8 +19,25 @@
         <!-- Sidebar Controls -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h1>WAR.0</h1>
+                <h1>WAR.1</h1>
                 <div class="deck-status" id="remaining-count">0 Cards</div>
+            </div>
+
+            <!-- Card Value Rubric -->
+            <div class="rubric-container">
+                <div class="rubric-title">UNIT INTEL</div>
+                <div class="rubric-grid">
+                    <div class="rubric-item"><span class="r-rank">A</span> <span class="r-val"
+                            style="color:#ef4444">25</span></div>
+                    <div class="rubric-item"><span class="r-rank">K</span> <span class="r-val"
+                            style="color:#f97316">20</span></div>
+                    <div class="rubric-item"><span class="r-rank">Q</span> <span class="r-val"
+                            style="color:#eab308">10</span></div>
+                    <div class="rubric-item"><span class="r-rank">10</span> <span class="r-val"
+                            style="color:#94a3b8">0</span></div>
+                    <div class="rubric-item"><span class="r-rank">J</span> <span class="r-val"
+                            style="color:#8b5cf6">-10</span></div>
+                </div>
             </div>
 
             <!-- Game Result Banner -->
@@ -46,8 +63,8 @@
 
                 <div class="divider"></div>
 
-                <button id="sim-btn" class="btn secondary">SIMULATE <span class="shortcut-hint">(P)</span></button>
-                <button id="reset-btn" class="btn tertiary">NEW GAME <span class="shortcut-hint">(R)</span></button>
+                <button id="sim-btn" class="btn secondary">SIMULATE <span class="shortcut-hint">(M)</span></button>
+                <button id="reset-btn" class="btn tertiary">NEW GAME <span class="shortcut-hint">(N)</span></button>
             </div>
 
             <div class="divider"></div>
