Final War.1 UI Fixes: Cache busting and Rank Order

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     </div>
 
     <!-- Load main script as module -->
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main.js?v=war1"></script>
 </body>
 
 </html>
